bit fixes of the advertising form design

--- a/alpha/advertising/templates/advertising/setup/payments.html
+++ b/alpha/advertising/templates/advertising/setup/payments.html
@@ -80,7 +80,7 @@
             <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal" checked="checked" >
             <label class="payments__check-label" for="payment_paypal_id"></label>
             <label class="payments__item-label" for="payment_paypal_id">
-                <img src="{{ STATIC_URL }}/images/featured/paypal.png"/>
+                <img src="{{ STATIC_URL }}/images/featured/paypal.png" height="84" />
             </label>
         </div>
 
@@ -88,7 +88,7 @@
             <input id="payment_visa_id" type="radio" name="payment_system" value="visa" disabled>
             <label class="payments__check-label" for="payment_visa_id"></label>
             <label class="payments__item-label" for="payment_visa_id">
-                <img src="{{ STATIC_URL }}/images/featured/visa.png"/>
+                <img src="{{ STATIC_URL }}/images/featured/visa.png" height="84" />
             </label>
         </div>
 
@@ -96,7 +96,7 @@
             <input id="payment_master_card_id" type="radio" name="payments_module" value="master_card" disabled>
             <label class="payments__check-label" for="payment_master_card_id"></label>
             <label class="payments__item-label" for="payment_master_card_id">
-                <img src="{{ STATIC_URL }}/images/featured/master_card.png"/>
+                <img src="{{ STATIC_URL }}/images/featured/master_card.png" height="84" />
             </label>
         </div>
 
@@ -104,7 +104,7 @@
             <input id="payment_email_money_id" type="radio" name="payments_module" value="email_money_transfer" disabled>
             <label class="payments__check-label" for="payment_email_money_id"></label>
             <label class="payments__item-label" for="payment_email_money_id">
-                <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png"/>
+                <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png" height="84" />
             </label>
         </div>
     </div>
