--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -40,7 +40,6 @@ html.preview, body.preview {
 
 .wrapper {
     width:auto;
-    text-align:center;
 }
 
 .wrapper.preview {
@@ -91,7 +90,6 @@ html.preview, body.preview {
 }
 
 .post-events-for-free {
-    margin-top: 5px;
     height: 35px;
 }
 
@@ -142,8 +140,7 @@ html.preview, body.preview {
     color: #4f4f4f;
     text-decoration:none;    
     vertical-align: middle;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 15px;    
 }
 
 .menu-wrapper ul.main-menu li a {
@@ -156,7 +153,8 @@ html.preview, body.preview {
     display: none;
 }
 
-.menu-wrapper ul.main-menu li a:hover .hover-effect {    
+.menu-wrapper ul.main-menu li a.active .hover-effect,
+.menu-wrapper ul.main-menu li a:hover .hover-effect {
     display: block;
     position: absolute;
     left: 0;
@@ -172,7 +170,6 @@ html.preview, body.preview {
 
 .location-wrapper,
 .search-wrapper {
-    width: 350px;
     float: left;
     height: 25px;
     padding-top: 3px;
@@ -210,13 +207,20 @@ html.preview, body.preview {
 .search-wrapper .search-label {
     display: inline-block;
     font-size: 12px;
-    margin-top: 4px;
-    color: #5189c0;
+    margin: 4px;
+    margin-left: 7px;
+    margin-right: 7px;
+    color: #022e52;
+    font-weight: bold;
+}
+
+.location-wrapper .location-label {
+    margin-left: 15px;
 }
 
 .location-wrapper input,
 .search-wrapper input {
-    width: 215px;        
+    width: 200px;
     background: none;
     border: none;
     height: 14px;
@@ -224,6 +228,7 @@ html.preview, body.preview {
 }
 
 .search-text-box input.search {
+    width: 250px;
     
 }
 
