Improve order pdf layout

--- a/alpha/accounts/templates/accounts/order_printed.html
+++ b/alpha/accounts/templates/accounts/order_printed.html
@@ -23,10 +23,10 @@
                 <tr>
                     <td>
                         <div class="printed-company-info">
-                            Cityfusion Inc.<br/>
-                            Address Here<br/>
-                            Saskatoon, SK Postal Code<br/>
-                            Canada
+                            Cityfusion Enterprises Inc.<br/>
+                            322 Gustin Crescent<br/>
+                            Saskatoon SK<br/>
+                            S7K6J8
                         </div>
                     </td>
                     <td class="printed-column-right">
@@ -42,10 +42,11 @@
             <div class="printed-details">
                 <div class="printed-billed">
                     <h2>Account billed:</h2>
-                    {{ user.first_name }} {{ user.last_name }} ({{ user.email }})<br/>
+                    {{ user.first_name }} {{ user.last_name }} ({{ user.email }})
+                    <!--<br/>
                     521 8th Street East<br/>
                     Saskatoon S7H 0P9<br/>
-                    Canada
+                    Canada-->
                 </div>
             </div>
             <div class="printed-items">
