--- a/alpha/event/templates/events/detail_page/similar_events.html
+++ b/alpha/event/templates/events/detail_page/similar_events.html
@@ -9,21 +9,24 @@
         </div>
     </header>
     <div class="similar-events">
-        <ul class="similar-events-ul">
-            {% for venue_event in events_from_venue %}
-                <li>
-                    <a href="{% event_link venue_event %}">
-                        {% if venue_event.image %}
-                            <img height="92" width="92" src="{% cropped_thumbnail venue_event.image "cropping" height=92 %}" alt="{{venue_event.name}}">
-                        {% else %}
-                            <img height="92" width="92" src="{{STATIC_URL}}/images/default-event-92x92.jpg" alt="{{venue_event.name}}">
-                        {% endif %}                        
-                    </a>
-                </li>
-            {% empty %}
-                No upcoming events
-            {% endfor %}
-        </ul>
+        {% if events_from_venue.count > 0 %}
+            <ul class="similar-events-ul {% if events_from_venue.count < 4 %}one-line{% endif %}">
+                {% for venue_event in events_from_venue %}
+                    <li>
+                        <a href="{% event_link venue_event %}">
+                            {% if venue_event.image %}
+                                <img height="92" width="92" src="{% cropped_thumbnail venue_event.image "cropping" height=92 %}" alt="{{venue_event.name}}">
+                            {% else %}
+                                <img height="92" width="92" src="{{STATIC_URL}}/images/default-event-92x92.jpg" alt="{{venue_event.name}}">
+                            {% endif %}                        
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <span class="empty">No upcoming events</span>
+        {% endif %}
+
     </div>
 
     {% if events_from_venue.count > 6 %}
