--- a/alpha/accounts/templates/accounts/order_printed.html
+++ b/alpha/accounts/templates/accounts/order_printed.html
@@ -61,7 +61,12 @@
                         <td>{{ order }}</td>
                         <td class="price">{{ order.cost_value }}</td>
                     </tr>
-
+                    {% if order.bonus and order.bonus.budget.ammount %}
+                        <tr>
+                            <td>Bonus</td>
+                            <td class="price">{{ order.bonus.budget }}</td>
+                        </tr>
+                    {% endif %}
                     {% for tax in order.taxes.all %}
                     <tr>
                         <td>{{ tax.tax_name }}</td>
