--- a/alpha/accounts/templates/accounts/_order_featured_table.html
+++ b/alpha/accounts/templates/accounts/_order_featured_table.html
@@ -19,8 +19,8 @@
             {{ order.cost }}
         </td>
         <td>
-            {% if order.bonus and order.bonus.budget.ammount %}
-                {{ order.bonus.budget }}
+            {% if order.bonus %}
+                {{ order.bonus }}
             {% else %}
                 -
             {% endif %}
