Add total budget and total cost properties to orders

--- a/alpha/accounts/templates/accounts/_order_advertising_table.html
+++ b/alpha/accounts/templates/accounts/_order_advertising_table.html
@@ -15,7 +15,7 @@
             {{ order.campaign.name }}
         </td>
         <td>
-            {{ order.budget }}
+            {{ order.total_budget }}
         </td>
         <td>
             {% if order.bonus %}
