--- a/alpha/accounts/templates/accounts/_order_featured_table.html
+++ b/alpha/accounts/templates/accounts/_order_featured_table.html
@@ -16,7 +16,7 @@
             {{ order.featured_event.event.name }}
         </td>
         <td>
-            {{ order.cost }}
+            {{ order.total_cost }}
         </td>
         <td>
             {% if order.bonus %}
