--- a/alpha/accounts/templates/accounts/_order_advertising_table.html
+++ b/alpha/accounts/templates/accounts/_order_advertising_table.html
@@ -4,16 +4,42 @@
 
 <table class="profile-table" celpadding="0" cellspacing="0">
     <tr>
-        <th>Campaign</th>
+        <th>
+            Campaign            
+        </th>
+        {% if admin %}<th>User</th>{% endif %}
         <th>Budget</th>
         <th>Bonus</th>
         <th>Actions</th>
     </tr>
+    {% if admin %}
+        <tr>
+            <form action="" method="get">
+            <td>
+                {{ advertising_orders_filter.form.campaign }}
+            </td>
+            <td>
+                <input type="text" name="account" class="user-input" data-ajax-url="{% url 'admin_user_autocomplete' %}" value="{{ selected_account.id }}" data-user-name="{{ selected_account.user }}" />
+            </td>
+            <td></td>
+            <td></td>
+            <td>
+                <div class="button show-all">
+                    Show all
+                </div>
+                <input type="submit" value="Search" class="button">
+            </td>
+            </form>
+        </tr>
+    {% endif %}
     {% for order in advertising_orders %}
     <tr>
         <td>
             {{ order.campaign.name }}
         </td>
+        {% if admin %}
+            <td>{{ order.account.user }}</td>
+        {% endif %}
         <td>
             {{ order.total_budget }}
         </td>
