--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -48,13 +48,14 @@ html.preview, body.preview {
 
 .page-container {
     width: 1007px;
-    margin: 18px auto 0 auto;
+    margin: 11px auto 0 auto;
     text-align:left;
     background: #e3e3e3;
     padding-bottom: 10px;
 }
 
 .page-container.index {
+    margin-top: 18px;
     min-height: 1200px;
 }
 
